# git-chat-ui

./: .env.example  .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  CONTEXT.md  PROJECT.md  README.md  SPEC.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: launch.json
.serena/: project.yml
docs/adr/: 0001-commit-graph-branch-tag-lane-reservation.md
server/: aiService.test.ts  aiService.ts  codexAppServer.ts  codexTaskFolders.test.ts  codexTaskFolders.ts  codexThreadTaskWatcher.test.ts  codexThreadTaskWatcher.ts  codexThreadTasks.ts  configStore.ts  gitService.test.ts  gitService.ts  index.ts  types.ts
server/ai/: directService.ts  normalize.ts  repositoryAssistant.ts  repositoryAssistantActions.ts  repositoryAssistantUserProfile.ts  service.ts
server/git/: branch.ts  command.ts  commit.ts  commitAvatars.ts  conflict.ts  controllerSnapshot.ts  diff.ts  pullRequest.ts  repository.ts  stash.ts  workingTree.ts
server/routes/: ai.ts  branches.ts  commits.ts  config.ts  conflicts.ts  controller.ts  helpers.ts  pullRequests.ts  repositories.ts  stash.ts  workingTree.ts
shared/: ai.ts  config.ts  repositoryAssistant.ts
src/: App.test.tsx  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  main.rs
src/components/: AppTabBranchBadge.tsx  BranchActionDialog.test.tsx  BranchActionDialog.tsx  BranchCreateDialog.test.tsx  BranchCreateDialog.tsx  BranchDeleteDialog.test.tsx  BranchDeleteDialog.tsx  BranchDiffDetailPanel.tsx  (+38 more)
tasks/: lessons.md  todo.md
(+169 files in other folders)
