[package]
name = "git-chat-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
